# pico-key

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  boot.py  code.py  commands.py  config.py  shell.py
.github/workflows/: codeql.yml  devskim.yml  node.js.yml
attacker/: main.py
include/: config.h  ducky.h  duckyscript.h  easter-egg.h  filesystem.h  pico-key.h  scripts.h  settings.h  stm.h  uid.h  usb.h
pico/: code.py
pico-key/: .gitignore  CMakeLists.txt  boot.c  boot.h  boot.py  code.py  commands.py  config.c  config.h  config.py  duckyscript.c  duckyscript.h  easter-egg.c  easter-egg.h  egg.c  egg.h  filesystem.c  filesystem.h  pico-key.c  pico-key.h  settings.c  settings.h  shell.py  stm.c  stm.h  tusb.h  tusb_option.h  uid.c  uid.h  usb.c  usb.h
pico-key/class/hid/: hid.h
pico-key/class/msc/: msc_device.h
pico-key/common/: tusb_config.h  tusb_fifo.h  tusb_option.h
pico-key/device/: usbd.h  usbd_pvt.h
pico-key/osal/: osal.h  osal_none.h
site/: package-lock.json  package.json
src/: boot.c  config.c  config.cpp  ducky.cpp  easter-egg.c  filesystem.c  filesystem.cpp  pico-key.cpp  scripts.cpp  settings.cpp  uid.c  usb.c  usb.cpp
tests/basic-keystroke-injection/: CMakeLists.txt  main.c
